// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridMain /> should render GridMain correctly with default props 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr min( 130rem, calc(100% - calc(3.2rem * 2)) ) 1fr;
  grid-column-gap: 3.2rem;
  min-height: unset;
}

.c0 > * {
  grid-column: 2;
}

<div>
  <main
    class="c0"
  >
    <div>
      GridMain
    </div>
  </main>
</div>
`;

exports[`<GridMain /> should render GridMain with different minHeight 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 1fr min( 130rem, calc(100% - calc(3.2rem * 2)) ) 1fr;
  grid-column-gap: 3.2rem;
  min-height: unset;
}

.c0 > * {
  grid-column: 2;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr min( 130rem, calc(100% - calc(3.2rem * 2)) ) 1fr;
  grid-column-gap: 3.2rem;
  min-height: 70vh;
}

.c1 > * {
  grid-column: 2;
}

.c2 {
  display: grid;
  grid-template-columns: 1fr min( 130rem, calc(100% - calc(3.2rem * 2)) ) 1fr;
  grid-column-gap: 3.2rem;
  min-height: 100vh;
}

.c2 > * {
  grid-column: 2;
}

.c3 {
  display: grid;
  grid-template-columns: 1fr min( 130rem, calc(100% - calc(3.2rem * 2)) ) 1fr;
  grid-column-gap: 3.2rem;
  min-height: 100%;
}

.c3 > * {
  grid-column: 2;
}

<div>
  <main
    class="c0"
  >
    <div>
      GridMain
    </div>
  </main>
  <main
    class="c1"
  >
    <div>
      GridMain
    </div>
  </main>
  <main
    class="c2"
  >
    <div>
      GridMain
    </div>
  </main>
  <main
    class="c3"
  >
    <div>
      GridMain
    </div>
  </main>
</div>
`;
